@@ -174,6 +174,8 @@ Other Changes
 * SOLR-3691: SimplePostTool: Mode for crawling/posting web pages
   See http://wiki.apache.org/solr/ExtractingRequestHandler for examples (janhoy)
 
+* SOLR-3824: Velocity: Error messages from search not displayed (janhoy)
+
 
 ==================  4.0.0-BETA ===================
 
